--- a/arena_generator/lib/treasures.yaml
+++ b/arena_generator/lib/treasures.yaml
@@ -1,36 +1,36 @@
 ---
-- hoard:
+- treasure table:
     level: "0-4"
     coins:
         CP: "6d6 x 100 (2,100)"
         SP: "3d6 x 100 (1,050)"
-        EP: "-"
+        EP: "-----"
         GP: "2d6 x 10 (70)"
-        PP: "-"
+        PP: "-----"
     treasures:
     - treasure:
         d100: "01-06"
-        Gems or Art Objects: "-"
-        Magic Items: "-"
+        Gems or Art Objects: "-----"
+        Magic Items: "-----"
     - treasure:
         d100: "07-16"
         Gems or Art Objects: "2d6 (7) 10 gp gems"
-        Magic Items: "-"
+        Magic Items: "-----"
     - treasure:
         d100: "17-26"
-        Gems or Art Objects: "2d4 (5) 25 gp art objects"
-        Magic Items: "-"
+        Gems or Art Objects: "2d4 (5) 25 gp arts"
+        Magic Items: "-----"
     - treasure:
         d100: "27-36"
         Gems or Art Objects: "2d6 (7) 50 gp gems"
-        Magic Items: "-"
+        Magic Items: "-----"
     - treasure:
         d100: "37-44"
         Gems or Art Objects: "2d6 (7) 10 gp gems"
         Magic Items: "Roll 1d6 times on Magic Item Table A."
     - treasure:
         d100: "45-52"
-        Gems or Art Objects: "2d4 (5) 25 gp art objects"
+        Gems or Art Objects: "2d4 (5) 25 gp arts"
         Magic Items: "Roll 1d6 times on Magic Item Table A."
     - treasure:
         d100: "53-60"
@@ -42,7 +42,7 @@
         Magic Items: "Roll 1d4 times on Magic Item Table B."
     - treasure:
         d100: "66-70"
-        Gems or Art Objects: "2d4 (5) 25 gp art objects"
+        Gems or Art Objects: "2d4 (5) 25 gp arts"
         Magic Items: "Roll 1d4 times on Magic Item Table B."
     - treasure:
         d100: "71-75"
@@ -54,7 +54,7 @@
         Magic Items: "Roll 1d4 times on Magic Item Table C."
     - treasure:
         d100: "79-80"
-        Gems or Art Objects: "2d4 (5) 25 gp art objects"
+        Gems or Art Objects: "2d4 (5) 25 gp arts"
         Magic Items: "Roll 1d4 times on Magic Item Table C."
     - treasure:
         d100: "81-85"
@@ -62,7 +62,7 @@
         Magic Items: "Roll 1d4 times on Magic Item Table C."
     - treasure:
         d100: "86-92"
-        Gems or Art Objects: "2d4 (5) 25 gp art objects"
+        Gems or Art Objects: "2d4 (5) 25 gp arts"
         Magic Items: "Roll 1d4 times on Magic Item Table F."
     - treasure:
         d100: "93-97"
@@ -70,7 +70,7 @@
         Magic Items: "Roll 1d4 times on Magic Item Table F."
     - treasure:
         d100: "98-99"
-        Gems or Art Objects: "2d4 (5) 25 gp art objects"
+        Gems or Art Objects: "2d4 (5) 25 gp arts"
         Magic Items: "Roll once on Magic Item Table G."
     - treasure:
         d100: "00"
