--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /_build
 /cover
 /deps
+/db
 /doc
 /.fetch
 erl_crash.dump
@@ -16,3 +17,28 @@ garena
 # generated files
 merchant_table_level_*.yaml
 scenario_*.txt
+
+# secret config files
+/config/*.secret.exs
+
+# Generated on crash by the VM
+erl_crash.dump
+
+# Generated on crash by NPM
+npm-debug.log
+
+# Static artifacts
+/assets/node_modules
+
+# Since we are building assets from assets/,
+# we ignore priv/static. You may want to comment
+# this depending on your deployment strategy.
+/priv/static/
+
+# Dialyzer plts are ignored to allow CI to cache the files
+/priv/plts/*.plt
+/priv/plts/*.plt.hash
+
+# Local environment variable files
+.env.local
+.env.*.local
